// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Right should render correctly when empty 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-end",
        "height": 40,
        "paddingBottom": 1,
        "paddingTop": 4,
        "width": 141,
      },
      false,
      {
        "width": 1,
      },
    ]
  }
/>
`;

exports[`Right should render correctly with amount 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-end",
        "height": 40,
        "paddingBottom": 1,
        "paddingTop": 4,
        "width": 141,
      },
      {
        "gap": 6,
      },
      false,
    ]
  }
>
  <View
    style={
      [
        undefined,
        {
          "justifyContent": "center",
        },
        {
          "height": 10,
          "width": 135,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "marginBottom": -40,
            "marginTop": -40,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
            {
              "height": 16,
              "width": 16,
            },
          ]
        }
      >
        <test-file-stub
          fill="#888"
          style={
            [
              {
                "height": 24,
                "width": 24,
              },
              {
                "height": 12,
                "width": 12,
              },
            ]
          }
        />
      </View>
      <View
        style={
          [
            {
              "flexDirection": "row",
            },
            {
              "alignItems": "baseline",
            },
            {
              "gap": 2,
              "paddingTop": 3,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "alignItems": "center",
                  "fontFamily": "CourierPrime-Bold",
                  "textAlign": "center",
                },
                {
                  "fontSize": 17,
                  "lineHeight": 23,
                },
              ],
              false,
            ]
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "alignItems": "center",
                      "fontFamily": "CourierPrime-Bold",
                      "textAlign": "center",
                    },
                    {
                      "fontSize": 17,
                      "lineHeight": 23,
                    },
                  ],
                  {
                    "color": "#2B19111A",
                    "letterSpacing": -1.275,
                  },
                ],
                false,
              ]
            }
          >
            0
          </Text>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "alignItems": "center",
                      "fontFamily": "CourierPrime-Bold",
                      "textAlign": "center",
                    },
                    {
                      "fontSize": 17,
                      "lineHeight": 23,
                    },
                  ],
                  {
                    "color": "#2B19111A",
                    "letterSpacing": -3.57,
                  },
                ],
                false,
              ]
            }
          >
            .
          </Text>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "alignItems": "center",
                      "fontFamily": "CourierPrime-Bold",
                      "textAlign": "center",
                    },
                    {
                      "fontSize": 17,
                      "lineHeight": 23,
                    },
                  ],
                  {
                    "color": "#2B19111A",
                    "letterSpacing": -1.275,
                  },
                ],
                false,
              ]
            }
          >
            0
          </Text>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "alignItems": "center",
                      "fontFamily": "CourierPrime-Bold",
                      "textAlign": "center",
                    },
                    {
                      "fontSize": 17,
                      "lineHeight": 23,
                    },
                  ],
                  {
                    "color": "#2B19111A",
                    "letterSpacing": -1.275,
                  },
                ],
                false,
              ]
            }
          >
            0
          </Text>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "alignItems": "center",
                      "fontFamily": "CourierPrime-Bold",
                      "textAlign": "center",
                    },
                    {
                      "fontSize": 17,
                      "lineHeight": 23,
                    },
                  ],
                  {
                    "color": "#2B19111A",
                    "letterSpacing": -5.949999999999999,
                  },
                ],
                false,
              ]
            }
          >
             
          </Text>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "alignItems": "center",
                      "fontFamily": "CourierPrime-Bold",
                      "textAlign": "center",
                    },
                    {
                      "fontSize": 17,
                      "lineHeight": 23,
                    },
                  ],
                  {
                    "color": "#2B19111A",
                    "letterSpacing": -1.275,
                  },
                ],
                false,
              ]
            }
          >
            0
          </Text>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "alignItems": "center",
                      "fontFamily": "CourierPrime-Bold",
                      "textAlign": "center",
                    },
                    {
                      "fontSize": 17,
                      "lineHeight": 23,
                    },
                  ],
                  {
                    "color": "#2B19111A",
                    "letterSpacing": -1.275,
                  },
                ],
                false,
              ]
            }
          >
            0
          </Text>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "alignItems": "center",
                      "fontFamily": "CourierPrime-Bold",
                      "textAlign": "center",
                    },
                    {
                      "fontSize": 17,
                      "lineHeight": 23,
                    },
                  ],
                  {
                    "color": "#2B19111A",
                    "letterSpacing": -1.275,
                  },
                ],
                false,
              ]
            }
          >
            0
          </Text>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "alignItems": "center",
                      "fontFamily": "CourierPrime-Bold",
                      "textAlign": "center",
                    },
                    {
                      "fontSize": 17,
                      "lineHeight": 23,
                    },
                  ],
                  {
                    "color": "#2B19111A",
                    "letterSpacing": -5.949999999999999,
                  },
                ],
                false,
              ]
            }
          >
             
          </Text>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "alignItems": "center",
                      "fontFamily": "CourierPrime-Bold",
                      "textAlign": "center",
                    },
                    {
                      "fontSize": 17,
                      "lineHeight": 23,
                    },
                  ],
                  {
                    "color": "#2B19111A",
                    "letterSpacing": -1.275,
                  },
                ],
                false,
              ]
            }
          >
            0
          </Text>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "alignItems": "center",
                      "fontFamily": "CourierPrime-Bold",
                      "textAlign": "center",
                    },
                    {
                      "fontSize": 17,
                      "lineHeight": 23,
                    },
                  ],
                  {
                    "color": "#2B1911",
                    "letterSpacing": -1.275,
                  },
                ],
                false,
              ]
            }
          >
            2
          </Text>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "alignItems": "center",
                      "fontFamily": "CourierPrime-Bold",
                      "textAlign": "center",
                    },
                    {
                      "fontSize": 17,
                      "lineHeight": 23,
                    },
                  ],
                  {
                    "color": "#2B1911",
                    "letterSpacing": -1.275,
                  },
                ],
                false,
              ]
            }
          >
            1
          </Text>
        </Text>
        <View
          style={
            {
              "justifyContent": "center",
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "fontFamily": "Baloo2-Medium",
                  },
                  false,
                  {
                    "fontSize": 12,
                    "lineHeight": 18,
                    "paddingBottom": 2,
                  },
                ],
                false,
              ]
            }
          >
            sats
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Right should render correctly with fiatAmount 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-end",
        "height": 40,
        "paddingBottom": 1,
        "paddingTop": 4,
        "width": 141,
      },
      {
        "gap": 6,
      },
      false,
    ]
  }
>
  <View
    style={
      [
        undefined,
        {
          "justifyContent": "center",
        },
        {
          "height": 10,
          "width": 135,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "marginBottom": -40,
            "marginTop": -40,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
            {
              "height": 16,
              "width": 16,
            },
          ]
        }
      >
        <test-file-stub
          fill="#888"
          style={
            [
              {
                "height": 24,
                "width": 24,
              },
              {
                "height": 12,
                "width": 12,
              },
            ]
          }
        />
      </View>
      <View
        style={
          [
            {
              "flexDirection": "row",
            },
            {
              "alignItems": "baseline",
            },
            {
              "gap": 2,
              "paddingTop": 3,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "alignItems": "center",
                  "fontFamily": "CourierPrime-Bold",
                  "textAlign": "center",
                },
                {
                  "fontSize": 17,
                  "lineHeight": 23,
                },
              ],
              false,
            ]
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "alignItems": "center",
                      "fontFamily": "CourierPrime-Bold",
                      "textAlign": "center",
                    },
                    {
                      "fontSize": 17,
                      "lineHeight": 23,
                    },
                  ],
                  {
                    "color": "#2B19111A",
                    "letterSpacing": -1.275,
                  },
                ],
                false,
              ]
            }
          >
            0
          </Text>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "alignItems": "center",
                      "fontFamily": "CourierPrime-Bold",
                      "textAlign": "center",
                    },
                    {
                      "fontSize": 17,
                      "lineHeight": 23,
                    },
                  ],
                  {
                    "color": "#2B19111A",
                    "letterSpacing": -3.57,
                  },
                ],
                false,
              ]
            }
          >
            .
          </Text>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "alignItems": "center",
                      "fontFamily": "CourierPrime-Bold",
                      "textAlign": "center",
                    },
                    {
                      "fontSize": 17,
                      "lineHeight": 23,
                    },
                  ],
                  {
                    "color": "#2B19111A",
                    "letterSpacing": -1.275,
                  },
                ],
                false,
              ]
            }
          >
            0
          </Text>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "alignItems": "center",
                      "fontFamily": "CourierPrime-Bold",
                      "textAlign": "center",
                    },
                    {
                      "fontSize": 17,
                      "lineHeight": 23,
                    },
                  ],
                  {
                    "color": "#2B19111A",
                    "letterSpacing": -1.275,
                  },
                ],
                false,
              ]
            }
          >
            0
          </Text>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "alignItems": "center",
                      "fontFamily": "CourierPrime-Bold",
                      "textAlign": "center",
                    },
                    {
                      "fontSize": 17,
                      "lineHeight": 23,
                    },
                  ],
                  {
                    "color": "#2B19111A",
                    "letterSpacing": -5.949999999999999,
                  },
                ],
                false,
              ]
            }
          >
             
          </Text>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "alignItems": "center",
                      "fontFamily": "CourierPrime-Bold",
                      "textAlign": "center",
                    },
                    {
                      "fontSize": 17,
                      "lineHeight": 23,
                    },
                  ],
                  {
                    "color": "#2B19111A",
                    "letterSpacing": -1.275,
                  },
                ],
                false,
              ]
            }
          >
            0
          </Text>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "alignItems": "center",
                      "fontFamily": "CourierPrime-Bold",
                      "textAlign": "center",
                    },
                    {
                      "fontSize": 17,
                      "lineHeight": 23,
                    },
                  ],
                  {
                    "color": "#2B19111A",
                    "letterSpacing": -1.275,
                  },
                ],
                false,
              ]
            }
          >
            0
          </Text>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "alignItems": "center",
                      "fontFamily": "CourierPrime-Bold",
                      "textAlign": "center",
                    },
                    {
                      "fontSize": 17,
                      "lineHeight": 23,
                    },
                  ],
                  {
                    "color": "#2B19111A",
                    "letterSpacing": -1.275,
                  },
                ],
                false,
              ]
            }
          >
            0
          </Text>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "alignItems": "center",
                      "fontFamily": "CourierPrime-Bold",
                      "textAlign": "center",
                    },
                    {
                      "fontSize": 17,
                      "lineHeight": 23,
                    },
                  ],
                  {
                    "color": "#2B19111A",
                    "letterSpacing": -5.949999999999999,
                  },
                ],
                false,
              ]
            }
          >
             
          </Text>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "alignItems": "center",
                      "fontFamily": "CourierPrime-Bold",
                      "textAlign": "center",
                    },
                    {
                      "fontSize": 17,
                      "lineHeight": 23,
                    },
                  ],
                  {
                    "color": "#2B19111A",
                    "letterSpacing": -1.275,
                  },
                ],
                false,
              ]
            }
          >
            0
          </Text>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "alignItems": "center",
                      "fontFamily": "CourierPrime-Bold",
                      "textAlign": "center",
                    },
                    {
                      "fontSize": 17,
                      "lineHeight": 23,
                    },
                  ],
                  {
                    "color": "#2B1911",
                    "letterSpacing": -1.275,
                  },
                ],
                false,
              ]
            }
          >
            2
          </Text>
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  [
                    {
                      "alignItems": "center",
                      "fontFamily": "CourierPrime-Bold",
                      "textAlign": "center",
                    },
                    {
                      "fontSize": 17,
                      "lineHeight": 23,
                    },
                  ],
                  {
                    "color": "#2B1911",
                    "letterSpacing": -1.275,
                  },
                ],
                false,
              ]
            }
          >
            1
          </Text>
        </Text>
        <View
          style={
            {
              "justifyContent": "center",
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "fontFamily": "Baloo2-Medium",
                  },
                  false,
                  {
                    "fontSize": 12,
                    "lineHeight": 18,
                    "paddingBottom": 2,
                  },
                ],
                false,
              ]
            }
          >
            sats
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "height": 17,
        "justifyContent": "center",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "color": "#7D675E",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            {
              "marginBottom": -40,
              "marginTop": -40,
            },
          ],
          false,
        ]
      }
    >
      100 000.00
       
      EUR
    </Text>
  </View>
</View>
`;

exports[`Right should render correctly with range 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-end",
        "height": 40,
        "paddingBottom": 1,
        "paddingTop": 4,
        "width": 141,
      },
      false,
      false,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "gap": -4,
      }
    }
  >
    <View
      style={
        [
          undefined,
          {
            "justifyContent": "center",
          },
          {
            "height": 10,
            "width": 135,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "flex-end",
              "marginBottom": -40,
              "marginTop": -40,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "height": 16,
                "width": 16,
              },
            ]
          }
        >
          <test-file-stub
            fill="#888"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": 12,
                  "width": 12,
                },
              ]
            }
          />
        </View>
        <View
          style={
            [
              {
                "flexDirection": "row",
              },
              {
                "alignItems": "baseline",
              },
              {
                "gap": 2,
                "paddingTop": 3,
              },
            ]
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "alignItems": "center",
                    "fontFamily": "CourierPrime-Bold",
                    "textAlign": "center",
                  },
                  {
                    "fontSize": 17,
                    "lineHeight": 23,
                  },
                ],
                false,
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 17,
                        "lineHeight": 23,
                      },
                    ],
                    {
                      "color": "#2B19111A",
                      "letterSpacing": -1.275,
                    },
                  ],
                  false,
                ]
              }
            >
              0
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 17,
                        "lineHeight": 23,
                      },
                    ],
                    {
                      "color": "#2B19111A",
                      "letterSpacing": -3.57,
                    },
                  ],
                  false,
                ]
              }
            >
              .
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 17,
                        "lineHeight": 23,
                      },
                    ],
                    {
                      "color": "#2B19111A",
                      "letterSpacing": -1.275,
                    },
                  ],
                  false,
                ]
              }
            >
              0
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 17,
                        "lineHeight": 23,
                      },
                    ],
                    {
                      "color": "#2B19111A",
                      "letterSpacing": -1.275,
                    },
                  ],
                  false,
                ]
              }
            >
              0
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 17,
                        "lineHeight": 23,
                      },
                    ],
                    {
                      "color": "#2B19111A",
                      "letterSpacing": -5.949999999999999,
                    },
                  ],
                  false,
                ]
              }
            >
               
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 17,
                        "lineHeight": 23,
                      },
                    ],
                    {
                      "color": "#2B19111A",
                      "letterSpacing": -1.275,
                    },
                  ],
                  false,
                ]
              }
            >
              0
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 17,
                        "lineHeight": 23,
                      },
                    ],
                    {
                      "color": "#2B19111A",
                      "letterSpacing": -1.275,
                    },
                  ],
                  false,
                ]
              }
            >
              0
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 17,
                        "lineHeight": 23,
                      },
                    ],
                    {
                      "color": "#2B19111A",
                      "letterSpacing": -1.275,
                    },
                  ],
                  false,
                ]
              }
            >
              0
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 17,
                        "lineHeight": 23,
                      },
                    ],
                    {
                      "color": "#2B19111A",
                      "letterSpacing": -5.949999999999999,
                    },
                  ],
                  false,
                ]
              }
            >
               
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 17,
                        "lineHeight": 23,
                      },
                    ],
                    {
                      "color": "#2B19111A",
                      "letterSpacing": -1.275,
                    },
                  ],
                  false,
                ]
              }
            >
              0
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 17,
                        "lineHeight": 23,
                      },
                    ],
                    {
                      "color": "#2B1911",
                      "letterSpacing": -1.275,
                    },
                  ],
                  false,
                ]
              }
            >
              2
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 17,
                        "lineHeight": 23,
                      },
                    ],
                    {
                      "color": "#2B1911",
                      "letterSpacing": -1.275,
                    },
                  ],
                  false,
                ]
              }
            >
              1
            </Text>
          </Text>
          <View
            style={
              {
                "justifyContent": "center",
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "fontFamily": "Baloo2-Medium",
                    },
                    false,
                    {
                      "fontSize": 12,
                      "lineHeight": 18,
                      "paddingBottom": 2,
                    },
                  ],
                  false,
                ]
              }
            >
              sats
            </Text>
          </View>
        </View>
      </View>
    </View>
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          {
            "color": "#9F8C82",
            "fontFamily": "Baloo2-Medium",
            "fontSize": 12,
            "lineHeight": 19,
          },
          false,
        ]
      }
    >
      ~
    </Text>
    <View
      style={
        [
          undefined,
          {
            "justifyContent": "center",
          },
          {
            "height": 10,
            "width": 135,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "flex-end",
              "marginBottom": -40,
              "marginTop": -40,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "height": 16,
                "width": 16,
              },
            ]
          }
        >
          <test-file-stub
            fill="#888"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": 12,
                  "width": 12,
                },
              ]
            }
          />
        </View>
        <View
          style={
            [
              {
                "flexDirection": "row",
              },
              {
                "alignItems": "baseline",
              },
              {
                "gap": 2,
                "paddingTop": 3,
              },
            ]
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "alignItems": "center",
                    "fontFamily": "CourierPrime-Bold",
                    "textAlign": "center",
                  },
                  {
                    "fontSize": 17,
                    "lineHeight": 23,
                  },
                ],
                false,
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 17,
                        "lineHeight": 23,
                      },
                    ],
                    {
                      "color": "#2B19111A",
                      "letterSpacing": -1.275,
                    },
                  ],
                  false,
                ]
              }
            >
              0
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 17,
                        "lineHeight": 23,
                      },
                    ],
                    {
                      "color": "#2B19111A",
                      "letterSpacing": -3.57,
                    },
                  ],
                  false,
                ]
              }
            >
              .
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 17,
                        "lineHeight": 23,
                      },
                    ],
                    {
                      "color": "#2B19111A",
                      "letterSpacing": -1.275,
                    },
                  ],
                  false,
                ]
              }
            >
              0
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 17,
                        "lineHeight": 23,
                      },
                    ],
                    {
                      "color": "#2B19111A",
                      "letterSpacing": -1.275,
                    },
                  ],
                  false,
                ]
              }
            >
              0
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 17,
                        "lineHeight": 23,
                      },
                    ],
                    {
                      "color": "#2B19111A",
                      "letterSpacing": -5.949999999999999,
                    },
                  ],
                  false,
                ]
              }
            >
               
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 17,
                        "lineHeight": 23,
                      },
                    ],
                    {
                      "color": "#2B19111A",
                      "letterSpacing": -1.275,
                    },
                  ],
                  false,
                ]
              }
            >
              0
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 17,
                        "lineHeight": 23,
                      },
                    ],
                    {
                      "color": "#2B1911",
                      "letterSpacing": -1.275,
                    },
                  ],
                  false,
                ]
              }
            >
              2
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 17,
                        "lineHeight": 23,
                      },
                    ],
                    {
                      "color": "#2B1911",
                      "letterSpacing": -1.275,
                    },
                  ],
                  false,
                ]
              }
            >
              1
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 17,
                        "lineHeight": 23,
                      },
                    ],
                    {
                      "color": "#2B1911",
                      "letterSpacing": -5.949999999999999,
                    },
                  ],
                  false,
                ]
              }
            >
               
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 17,
                        "lineHeight": 23,
                      },
                    ],
                    {
                      "color": "#2B1911",
                      "letterSpacing": -1.275,
                    },
                  ],
                  false,
                ]
              }
            >
              0
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 17,
                        "lineHeight": 23,
                      },
                    ],
                    {
                      "color": "#2B1911",
                      "letterSpacing": -1.275,
                    },
                  ],
                  false,
                ]
              }
            >
              0
            </Text>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 17,
                        "lineHeight": 23,
                      },
                    ],
                    {
                      "color": "#2B1911",
                      "letterSpacing": -1.275,
                    },
                  ],
                  false,
                ]
              }
            >
              0
            </Text>
          </Text>
          <View
            style={
              {
                "justifyContent": "center",
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "fontFamily": "Baloo2-Medium",
                    },
                    false,
                    {
                      "fontSize": 12,
                      "lineHeight": 18,
                      "paddingBottom": 2,
                    },
                  ],
                  false,
                ]
              }
            >
              sats
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
